egonlang-core/res/examples/invalid/assign_mixed_type_list.eg
a = [1, "a"];

// out: TypeError: mismatched types: expected type `number` but received `string`